--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -86,7 +86,7 @@
                 </div>
                 <div class="col-md-2">
                         <label for="inputZip" class="form-label">Edad</label>
-                        <input type="text" class="form-control" id="inputZip">
+                        <input type="text" class="form-control" id="inputAge">
                 </div>
                 <div class="col-12">
                     <div class="form-check">
